version/0.1/_sources/index.rst.txt
Ansys tools common |version|
############################

The Ansys tools project is a collection of tools for the PyAnsys ecosystem.



.. grid:: 1 2 2 2


    .. grid-item-card:: Getting started :material-regular:`directions_run`
        :padding: 2 2 2 2
        :link: getting_started/index
        :link-type: doc

        Learn how to install the collection.

    .. grid-item-card:: User guide :material-regular:`menu_book`
        :padding: 2 2 2 2
        :link: user_guide/index
        :link-type: doc

        Understand key concepts for using the tools into your workflow.


    .. grid-item-card:: API reference :material-regular:`bookmark`
        :padding: 2 2 2 2
        :link: api/index
        :link-type: doc

        Understand how to use Python to interact programmatically with
        the Ansys tools collection.

    .. grid-item-card:: Contribute :material-regular:`group`
        :padding: 2 2 2 2
        :link: contributing
        :link-type: doc

        Learn how to contribute to the Ansys tools codebase or documentation.



.. toctree::
    :hidden:
    :maxdepth: 3

    getting_started/index
    user_guide/index
    api/index
    contributing
